# slight

./: .gitignore  .gitmodules  LICENSE  README.rst  pyproject.toml
.github/workflows/: tests.yml
docs/: api_reference.rst  changelog.rst  common_use_cases.rst  conf.py  contribute.rst  first_steps.rst  going_further.rst  index.rst
slight/: __init__.py  __main__.py
slight/static/: index.css  slideshow.css  slideshow.js
slight/templates/: add_slideshow.html.jinja2  delete_slideshow.html.jinja2  index.html.jinja2  remove_slideshow.html.jinja2  rename_slideshow.html.jinja2  slideshow.html.jinja2
tests/: conftest.py  test_slight.py
tests/slideshows/slideshows-group-1/slideshow-1/: meta.html  slides.html
tests/slideshows/slideshows-group-1/slideshow-1/static/: test
tests/slideshows/slideshows-group-1/slideshow-2/: meta.html  slides.html
tests/slideshows/slideshows-group-2/slideshow-3/: meta.html  slides.html
tests/slideshows/slideshows-group-2/slideshow-4/: meta.html  slides.html
tests/themes/themes-group-1/.ignored/: style.css
tests/themes/themes-group-1/theme-1/: style.css
tests/themes/themes-group-1/theme-2/: style.css
tests/themes/themes-group-2/theme-3/: style.css
tests/themes/themes-group-2/theme-4/: style.css
