[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'slight'
description = 'A lightweight slideshow editor'
authors = [{name = 'CourtBouillon', email = 'contact@courtbouillon.org'}]
maintainers = [{name = 'CourtBouillon', email = 'contact@courtbouillon.org'}]
requires-python = '>=3.7'
readme = {file = 'README.rst', content-type = 'text/x-rst'}
license = {file = 'LICENSE'}
dependencies = [
  'flask >=2.0.0',
  'flask-weasyprint >=0.6',
]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Internet :: WWW/HTTP',
  'Topic :: Multimedia :: Graphics :: Presentation',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://www.courtbouillon.org/slight'
Documentation = 'https://doc.courtbouillon.org/slight/'
Code = 'https://github.com/CourtBouillon/slight'
Issues = 'https://github.com/CourtBouillon/slight/issues'
Changelog = 'https://github.com/CourtBouillon/slight/releases'
Donation = 'https://opencollective.com/courtbouillon'

[project.optional-dependencies]
doc = ['sphinx', 'sphinx_rtd_theme']
test = ['pytest', 'isort', 'flake8']

[project.scripts]
slight = 'slight.__main__:main'

[tool.flit.sdist]
exclude = ['.*']

[tool.coverage.run]
branch = true
include = ['tests/*', 'slight/*']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'def __repr__', 'raise NotImplementedError']
omit = ['.*']

[tool.isort]
default_section = 'FIRSTPARTY'
multi_line_output = 4
